--- a/package.json
+++ b/package.json
@@ -1,1 +1,41 @@
-{"homepage":"https://Pablojk9.github.io/Mynat-page","name":"minat","version":"0.1.0","private":true,"dependencies":{"@testing-library/jest-dom":"^5.17.0","@testing-library/react":"^13.4.0","@testing-library/user-event":"^13.5.0","babel-preset-react-app":"^10.0.1","react":"^18.3.1","react-dom":"^18.3.1","react-router-dom":"^6.23.1","react-scripts":"5.0.1","web-vitals":"^2.1.4"},"scripts":{"start":"react-scripts start","predeploy":"npm run build","deploy":"gh-pages -d build","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]},"devDependencies":{"gh-pages":"^6.1.1"}}
+{"homepage":"https://Pablojk9.github.io/Mynat-page",
+"name":"minat",
+"version":"0.1.0",
+"private":true,
+"dependencies":{
+    "@testing-library/jest-dom":"^5.17.0",
+    "@testing-library/react":"^13.4.0",
+    "@testing-library/user-event":"^13.5.0",
+    "babel-preset-react-app":"^10.0.1",
+    "bcrypt":"^5.1.1",
+    "body-parser":"^1.20.2",
+    "cors":"^2.8.5",
+    "express":"^4.19.2",
+    "mysql":"^2.18.1",
+    "mysql2":"^3.10.1",
+    "react":"^18.3.1",
+    "react-dom":"^18.3.1",
+    "react-router-dom":"^6.23.1",
+    "react-scripts":"5.0.1",
+    "web-vitals":"^2.1.4"
+    },
+"scripts":
+    {"start":"react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
+    "build":"react-scripts build",
+    "test":"react-scripts test",
+    "eject":"react-scripts eject"
+    },
+"eslintConfig":
+    {"extends":[
+        "react-app",
+        "react-app/jest"
+    ]},
+    "browserslist":{
+        "production":[">0.2%","not dead","not op_mini all"]
+        ,"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]
+    },
+    "devDependencies":
+    {"gh-pages":"^6.1.1"}
+}
